--- a/back/.env
+++ b/back/.env
@@ -1,4 +1,21 @@
-MONGO_URL='mongodb+srv://eddufrein:Eg2n6ggNFRlhwpDT@cluster0.d2ibbpi.mongodb.net/'
-MONGO_DBNAME='haval'
-PORT=80
-HTTPS_PORT=8443
+
+# Server
+HOST=0.0.0.0
+PORT=1337
+
+# Secrets
+APP_KEYS=Hbl4MOLnRDMqbZ/9NmjD+A==,LddnwMEtBZYX5QVCLdgyFQ==,Z61PCGg3Jy080XcMq3doBw==,LJVEYq2SV/yWUpdOW3pwFg==
+API_TOKEN_SALT=zv0BdH5yuXMqLIHFyidLlA==
+ADMIN_JWT_SECRET=47ejzUnt4vyHQXjPLLJNZg==
+TRANSFER_TOKEN_SALT=YgXBUPXCbSrN3cfI90s3Ng==
+
+# Database
+DATABASE_CLIENT=sqlite
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_NAME=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+DATABASE_SSL=false
+DATABASE_FILENAME=.tmp/data.db
+JWT_SECRET=s2O1Ddvu0iDBj8QHpI9pmA==
