--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@strapi/blocks-react-renderer": "^1.0.2",
     "antd": "^5.24.2",
     "next": "^15.2.0",
     "react": "^19.0.0",
@@ -30,6 +31,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
+    "husky": "^9.1.7",
     "jsdom": "^26.0.0",
     "react-test-renderer": "^19.0.0",
     "sass": "^1.85.1",
