--- a/front/package.json
+++ b/front/package.json
@@ -15,10 +15,13 @@
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@strapi/blocks-react-renderer": "^1.0.2",
     "antd": "^5.24.2",
+    "bcryptjs": "^3.0.2",
     "next": "^15.2.0",
+    "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "swr": "^2.3.3"
+    "swr": "^2.3.3",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -26,6 +29,7 @@
     "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
