--- a/front/package.json
+++ b/front/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@strapi/blocks-react-renderer": "^1.0.2",
+    "@strapi/client": "^1.2.0",
     "antd": "^5.24.2",
     "bcryptjs": "^3.0.2",
+    "jose": "^6.0.10",
     "next": "^15.2.0",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
