--- a/front/.env.development
+++ b/front/.env.development
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API='http://localhost:1337/api'
+NEXT_PUBLIC_API_URL='http://localhost:1337/api'
 NEXT_PUBLIC_URL='http://localhost:1337'
 NEXT_PUBLIC_HOST='https://localhost'
 NEXT_PUBLIC_EMAIL='candylook.mail@gmail.com'
