--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "@strapi/client": "^1.2.0",
     "antd": "^5.24.2",
     "bcryptjs": "^3.0.2",
+    "chalk": "^5.4.1",
     "jose": "^6.0.10",
     "next": "^15.2.0",
     "nodemailer": "^6.10.1",
