--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^7.0.12",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-simple-keyboard": "^3.8.141",
     "swr": "^2.3.3",
     "zod": "^3.24.3"
   },
